turtleart.circleten.CircleTen.scala.error
Compilation error:
CircleTen:2: error: '<-' expected but ')' found.
  for(i-< 1 to 10){
                 ^CircleTen:5: error: illegal start of simple expression
} 
^